--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_023fd494edec252ee8a8d5a83_7581c02849" tabindex="-1" value=""></div>
-    <div class="clear contact__email-clear"><input type="submit" value="&rarr;" name="&rarr;" id="mc-embedded-subscribe" class="button contact__email-button"></div>
+    <div class="clear contact__email-clear"><input type="submit" value="&rarr;" name="&rarr;" id="mc-embedded-subscribe" class="contact__email-button"></div>
     </div>
 </form>
 </div>
