--- a/happenings/morning-silk.html
+++ b/happenings/morning-silk.html
@@ -105,10 +105,10 @@
   </div>
 
   <div class="footer__nav">
-    <a href="" class="footer__nav-link">Index &#x2197;</a>
-    <a href="" class="footer__nav-link">LinkedIn &#x2197;</a>
-    <a href="" class="footer__nav-link">Plia &#x2197;</a>
-    <a href="" class="footer__nav-link">William Paley &#x2197;</a>
+    <a href="" class="footer__nav-link">Index &nbsp &#x2197;</a>
+    <a href="" class="footer__nav-link">LinkedIn &nbsp &#x2197;</a>
+    <a href="" class="footer__nav-link">Plia &nbsp &#x2197;</a>
+    <a href="" class="footer__nav-link">William Paley &nbsp &#x2197;</a>
   </div>
 
 </footer>
