--- a/happenings/offering.html
+++ b/happenings/offering.html
@@ -66,7 +66,7 @@
                       <img class="event__side-logo" src="../assets/offering/offering.svg" alt="Offering">
 
                       <p class="event__side-paragraph border-bottom-dotted">
-                        <span class="offering__main-text-mono"><span class="offering__main-text-mono-600">44LLC</span> is pleased to present <span class="offering__main-text-mono-italics">Offering</span>, a new installation work by <a href="https://www.cyjostudio.com/offering">thecreativedestruction</a>, 
+                        <span class="event__side-paragraph-mono"><span class="event__side-paragraph-mono-600">44LLC</span> is pleased to present <span class="event__side-paragraph-mono-italics">Offering</span>, a new installation work by <a href="https://www.cyjostudio.com/offering">thecreativedestruction</a>, 
                         a contemporary art collaborative founded by CYJO and Timothy Archambault.</span>
                         <br><br>
                         This work uses tobacco to bring awareness to the missing and murdered Indigenous women, 
@@ -143,10 +143,10 @@
   </div>
 
   <div class="footer__nav">
-    <a href="" class="footer__nav-link">Index &#x2197;</a>
-    <a href="" class="footer__nav-link">LinkedIn &#x2197;</a>
-    <a href="" class="footer__nav-link">Plia &#x2197;</a>
-    <a href="" class="footer__nav-link">William Paley &#x2197;</a>
+    <a href="" class="footer__nav-link">Index &nbsp &#x2197;</a>
+    <a href="" class="footer__nav-link">LinkedIn &nbsp &#x2197;</a>
+    <a href="" class="footer__nav-link">Plia &nbsp &#x2197;</a>
+    <a href="" class="footer__nav-link">William Paley &nbsp &#x2197;</a>
   </div>
 
 </footer>
